force-app/main/default/objects/Match__c/Match__c.object-meta.xml
<CustomObject>
    <label>Match</label>
    <nameField>
        <label>Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>