force-app/main/default/objects/Match__c/fields/MatchDesc__c.field-meta.xml
<CustomField>
    <fullName>MatchDesc__c</fullName>
    <label>MatchDesc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>