force-app/main/default/objects/Match__c/fields/MatchFormat__c.field-meta.xml
<CustomField>
    <fullName>MatchFormat__c</fullName>
    <label>MatchFormat</label>
    <length>50</length>
    <type>Text</type>
</CustomField>