force-app/main/default/objects/Match__c/fields/matchId__c.field-meta.xml
<CustomField>
    <fullName>matchId__c</fullName>
    <label>matchId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>