force-app/main/default/objects/Match__c/fields/SeriesId__c.field-meta.xml
<CustomField>
    <fullName>SeriesId__c</fullName>
    <label>SeriesId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>